<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <Button
        android:id="@+id/hello_world"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello_world"
        android:textSize="@dimen/common_font_size"/>

    <Button
        android:id="@+id/skip_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/skip_login"
        android:textSize="@dimen/common_font_size"/>

    <Button
        android:id="@+id/SQL_read_store"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/SQL_read_store"
        android:textSize="@dimen/common_font_size"/>

    <Button
        android:id="@+id/tally_book"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tally"
        android:textSize="@dimen/common_font_size"/>


</LinearLayout>