<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/grey_f3">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="20dp">

        <TextView
            android:id="@+id/item_ac_mainlv_top_tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/out"
            android:textSize="18sp"
            android:layout_marginLeft="40dp"/>

        <TextView
            android:id="@+id/item_ac_mainlv_top_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/item_ac_mainlv_top_tv1"
            android:text="￥ 0"
            android:textSize="@dimen/common_font_size"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="40dp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/item_ac_mainlv_top_tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/in"
            android:textSize="18sp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="220dp"/>

        <TextView
            android:id="@+id/item_ac_mainlv_top_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/item_ac_mainlv_top_tv1"
            android:text="￥ 0"
            android:textSize="@dimen/common_font_size"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="220dp"/>

        <TextView
            android:id="@+id/item_ac_mainlv_top_remain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_ac_mainlv_top_out"
            android:text="@string/remain"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:layout_marginLeft="110dp"/>

        <TextView
            android:id="@+id/item_ac_mainlv_top_remain_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_ac_mainlv_top_out"
            android:layout_toRightOf="@id/item_ac_mainlv_top_remain"
            android:text="￥ 0"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:layout_marginLeft="5dp"
            android:textStyle="bold"
            android:textColor="@color/black"/>
    </RelativeLayout>

</LinearLayout>